unpackaged/main/default/objects/Account/fields/Primary_Healthcare_Professional2__c.field-meta.xml
<CustomField>
    <fullName>Primary_Healthcare_Professional2__c</fullName>
    <label>Primary Healthcare Professional</label>
    <length>18</length>
    <type>Text</type>
</CustomField>