unpackaged/main/default/objects/Account/fields/Primary_Healthcare_Professional__c.field-meta.xml
<CustomField>
    <fullName>Primary_Healthcare_Professional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the primary healthcare professional or dietician that looks after this person or family? (If there are more than one, the Contacts should be assigned to separate households)</description>
    <label>Primary Healthcare Professional</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Households</relationshipLabel>
    <relationshipName>PatientHouseholds</relationshipName>
    <type>Lookup</type>
</CustomField>