unpackaged/main/default/objects/Account/fields/SAP_Account__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account__c</fullName>
    <externalId>true</externalId>
    <label>SAP Account #</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>